fixing mobile jumping

--- a/mobile.css
+++ b/mobile.css
@@ -2,7 +2,7 @@ body{
 	width:100%;
 	background-image: url("img/backgroundm.png");
 	background-size: cover;
-	height:400%;
+	height:400vh;
 	padding: 0;
 	margin:0;
 	border-width: 0;
@@ -12,7 +12,7 @@ body{
 	top:0%;
 	overflow: hidden; 
 	width:100%;
-	height:100%;
+	height:100vh;
 	border-width: 0;
 	z-index:0;
 	
